# foundation-l1

./: .gitignore  README.md  pyproject.toml  requirements.txt
foundation-l1/: 01_intro_to_programming.md  01_intro_to_programming_part_1.md  01_intro_to_programming_part_2.md  02_hello_world.md  03_reading_input.md  04_variables.md  05_operators.md  06_if_statements.md  07_while_loops.md  08_for_loops.md  09_nested_loops.md  10_switch_statements.md  11_debugging.md  12_functions.md  13_projects.md
foundation-l1/arabic/: 01_intro_to_programming.md  01_intro_to_programming_part_2.md  02_hello_world.md  03_reading_input.md  04_variables.md  05_operators.md  06_if_statements.md
